<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.administrator.mystore.mainclass.MainActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorAccent"
        >
        <TextView
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/market"
            android:textColor="@color/colorwieth"
            android:textSize="25sp"
            android:gravity="center"
            />
    </android.support.v7.widget.Toolbar>
    <android.support.v4.view.ViewPager
        android:id="@+id/main_mid_View_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        >
        <RadioGroup
            android:id="@+id/main_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <RadioButton
                android:id="@+id/market"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:drawableTop="@drawable/market_selector"
                android:text="@string/market"
                android:button="@null"
                />
            <RadioButton
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:drawableTop="@drawable/messahe_selector"
                android:text="@string/message"
                android:button="@null"

                />
            <RadioButton
                android:id="@+id/contacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/contacts"
                android:gravity="center"
                android:button="@null"
                android:drawableTop="@drawable/contact_selector"
                />
            <RadioButton
                android:id="@+id/me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/me"
                android:gravity="center"
                android:button="@null"
                android:drawableTop="@drawable/me_selector"
                />
        </RadioGroup>
    </LinearLayout>
</LinearLayout>
